--- a/booking-app/src/app/admin/admin.component.html
+++ b/booking-app/src/app/admin/admin.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
-            <h2 i18n="Some text about me" >About Admin</h2>
+            <h2>About Admin</h2>
             <div class="fakeimg">Fake Image</div>
             <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
             <h3>Some Links</h3>
