--- a/booking-app/src/app/admin/add-employee/add-employee.component.html
+++ b/booking-app/src/app/admin/add-employee/add-employee.component.html
@@ -1,29 +1,27 @@
+<p>
+  Title: {{appComponent.title}}
+</p>
 <form #employeeForm="ngForm" (ngSubmit)="addEmployee()" novalidate>
 
   <!-- {{employeeForm.value | json}} -->
-
   <div class="form-group">
     <label for="username">Login/email</label>
-    <input [(ngModel)]="employee.user.username" type="text" name="username" id="username" class="form-control"
-      placeholder="" aria-describedby="helpId">
+    <input [(ngModel)]="employee.user.username" type="text" name="username" id="username" class="form-control" placeholder="" aria-describedby="helpId">
     <small id="helpId" class="text-muted">Help text</small>
   </div>
   <div class="form-group">
-    <label for="firstName">First name</label>
-    <input [(ngModel)]="employee.firstName" type="text" name="firstName" id="firstName" class="form-control"
-      placeholder="" aria-describedby="helpId">
+    <label for="firstName" *ngIf="translate">{{translate.addEmployee.firstName}}</label>
+    <input [(ngModel)]="employee.firstName" type="text" name="firstName" id="firstName" class="form-control" aria-describedby="helpId">
     <small id="helpId" class="text-muted">Help text</small>
   </div>
   <div class="form-group">
-    <label for="lastName">Last name</label>
+    <label for="lastName" *ngIf="translate">{{translate.addEmployee.lastName}}</label>
     <input [(ngModel)]="employee.lastName" pattern="^[^!#$%;]{3,12}$" type="text" name="lastName" id="lastName"
-      class="form-control" required #lastName="ngModel" [class.is-invalid]="lastName.invalid && lastName.touched"
-      aria-describedby="helpId">
-    <small id="helpId" class="text-danger" [class.d-none]="lastName.valid || lastName.untouched">Field is required and
-      must be matches</small>
+      class="form-control" required #lastName="ngModel" [class.is-invalid]="lastName.invalid && lastName.touched">
+    <small class="text-danger" [class.d-none]="lastName.valid || lastName.untouched" *ngIf="translate">{{translate.requiredField}}</small>
   </div>
   <div class="form-group">
-    <label for="phone">Phone</label>
+    <label for="phone" *ngIf="translate">{{translate.addEmployee.phone}}</label>
     <input [(ngModel)]="employee.phone" pattern="^$|^[0-9-+()]{9,20}$" type="text" name="phone" id="phone" class="form-control" placeholder="" aria-describedby="helpId">
     <small id="helpId" class="text-muted">Help text</small>
   </div>
@@ -34,12 +32,11 @@
   </div>
   <div class="form-group">
     <label for="pesel">Pesel</label>
-    <input [(ngModel)]="employee.pesel" type="text" name="pesel" id="pesel" class="form-control" placeholder=""
-      aria-describedby="helpId">
+    <input [(ngModel)]="employee.pesel" type="text" name="pesel" id="pesel" class="form-control" placeholder="" aria-describedby="helpId">
     <small id="helpId" class="text-muted">Help text</small>
   </div>
   <div class="form-group">
-    <label for="language">Select language</label>
+    <label for="language" *ngIf="translate">{{translate.addEmployee.selectLanguage}}</label>
     <select [(ngModel)]="employee.language" class="form-control" name="language" id="language" required
       #language="ngModel" [class.is-invalid]="language.invalid">
       <option value="">Select language</option>
