--- a/booking-app/src/app/login/login.component.html
+++ b/booking-app/src/app/login/login.component.html
@@ -1,4 +1,21 @@
 <main class="container">
-    <h1 class="mt-5">LOGIN</h1>
+  <h1 class="mt-5">LOGIN</h1>
+  <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+    <div class="form-group">
+      <label for="login">Login/email:</label>
+      <input [(ngModel)]="username" type="text" name="login" id="login" class="form-control" placeholder="" aria-describedby="helpId">
+      <small id="helpId" class="text-muted">Help text</small>
+    </div>
+    <div class="form-group">
+      <label for="password" *ngIf="translate">{{translate.login.password}}</label>
+      <input [(ngModel)]="password" type="text" name="password" id="password" class="form-control" placeholder="" aria-describedby="helpId">
+      <small id="helpId" class="text-muted">Help text</small>
+    </div>
+    <input name="login" id="login" class="btn btn-primary" type="submit" value="{{translate.login.signin}}" *ngIf="translate">
 
+  </form>
+  <br>
+  <button (click)="auth.isUserLoggedIn()">is login?</button>
+  <br>
+  <button (click)="auth.logOut()">Logout</button>
 </main>
